--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
             var user = document.getElementById("username").value;
             var pass = document.getElementById("password").value;
             if(user=="test" && pass=="test"){
-                window.location.href = "./home.html";
+                window.location.href = "home.html";
             }
             else{
                 window.alert("this is a dummy site. \r\n try using 'test' as a user and password.")
