hopefully last commit

--- a/index.html
+++ b/index.html
@@ -46,17 +46,17 @@
 </style>
 </head>
 <body style="background-image: url(back.jpg)">
-    <div class="container shadow-lg text-center w-50 py-5 dark position-absolute top-50 start-50 translate-middle">
-        <div class="container-fluid text-center header text-primary margin-bottom-3">
+    <div class="col-fluid shadow-lg text-center w-50 py-5 dark position-absolute top-50 start-50 translate-middle">
+        <div class="container-fluid text-center header text-primary">
             <h1>THIS IS A RANDOM LOGIN PAGE</h1>        
         </div>
         <br>
         <br>
-        <div class="container my-3">
-            <input type="text" id="username" placeholder="username">
+        <div class="container-100 my-3">
+            <input class="w-75" type="text" id="username" placeholder="username">
         </div>
-        <div class="container my-3 ">
-            <input type="password" id="password" placeholder="password">
+        <div class="container-100 my-3 ">
+            <input class="w-75"type="password" id="password" placeholder="password">
         </div>
         <button type="button" onclick="login()">login</button>
 </div>
